--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,22 @@
 
   <name>jadice server :: Converter Client</name>
   <url>http://www.levigo.de</url>
+  
+  <scm>
+    <connection>scm:git:ssh://git@github.com:levigo/jadice-server-converter-client.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com:levigo/jadice-server-converter-client.git</developerConnection>
+    <url>https://github.com/levigo/jadice-server-converter-client</url>
+    <tag>HEAD</tag>
+  </scm>  
+
+  <distributionManagement>
+    <!-- Required for releases, see http://blog.glassdiary.com/post/64370899685/how-to-use-maven-release-plugin-with-github-releases -->
+    <repository>
+      <id>internal.repo</id>
+      <name>Temporary Staging Repository</name>
+      <url>file://${project.build.directory}/mvn-repo</url>
+    </repository>
+  </distributionManagement>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -37,48 +53,48 @@
           <target>1.8</target>
         </configuration>
       </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>2.3</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <shadedArtifactAttached>true</shadedArtifactAttached> <!-- Make the shaded artifact not the main one -->
-                    <shadedClassifierName>shaded</shadedClassifierName> <!-- set the suffix to the shaded jar -->
-                    <filters>
-                  <filter>
-                        <!--
-                            Exclude files that sign a jar
-                            (one or multiple of the dependencies).
-                            One may not repack a signed jar without
-                            this, or you will get a
-                            SecurityException at program start.
-                        -->
-                        <artifact>*:*</artifact>
-                        <excludes>
-                            <exclude>META-INF/*.SF</exclude>
-                            <exclude>META-INF/*.RSA</exclude>
-                            <exclude>META-INF/*.INF</exclude> <!-- This one may not be required -->
-                        </excludes>
-                    </filter>
-                </filters>   
-			   <transformers>
-                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <manifestEntries>
-                  	<!-- Property is displayed in Application Title Bar and shall show JS version-->
-                    <Implementation-Version>${jadice.server.version}</Implementation-Version>
-                  </manifestEntries>
-                </transformer>
-              </transformers>
-            </configuration>
-          </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>2.3</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <shadedArtifactAttached>true</shadedArtifactAttached> <!-- Make the shaded artifact not the main one -->
+          <shadedClassifierName>shaded</shadedClassifierName> <!-- set the suffix to the shaded jar -->
+          <filters>
+            <filter>
+              <!--
+                Exclude files that sign a jar
+                (one or multiple of the dependencies).
+                One may not repack a signed jar without
+                this, or you will get a
+                SecurityException at program start.
+              -->
+              <artifact>*:*</artifact>
+              <excludes>
+                <exclude>META-INF/*.SF</exclude>
+                <exclude>META-INF/*.RSA</exclude>
+                <exclude>META-INF/*.INF</exclude> <!-- This one may not be required -->
+              </excludes>
+            </filter>
+          </filters>   
+          <transformers>
+            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+              <manifestEntries>
+                <!-- Property is displayed in Application Title Bar and shall show JS version-->
+                <Implementation-Version>${jadice.server.version}</Implementation-Version>
+              </manifestEntries>
+            </transformer>
+          </transformers>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>com.akathist.maven.plugins.launch4j</groupId>
         <artifactId>launch4j-maven-plugin</artifactId>
@@ -212,14 +228,14 @@
       <version>1.2</version>
     </dependency>
     <dependency>
-		<groupId>eu.hansolo.enzo</groupId>
-		<artifactId>Enzo</artifactId>
-		<version>${enzo.version}</version>
-	</dependency>
-	<dependency>
-	    <groupId>de.jensd</groupId>
-	    <artifactId>fontawesomefx</artifactId>
-	    <version>${fontawesomefx.version}</version>
-	</dependency>
+      <groupId>eu.hansolo.enzo</groupId>
+      <artifactId>Enzo</artifactId>
+      <version>${enzo.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>de.jensd</groupId>
+      <artifactId>fontawesomefx</artifactId>
+      <version>${fontawesomefx.version}</version>
+    </dependency>
   </dependencies>
 </project>
