--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,14 @@
       <artifactId>libreoffice-client</artifactId>
       <version>${jadice.server.version}</version>
     </dependency>
+    
+    <dependency>
+    	<groupId>junit</groupId>
+    	<artifactId>junit</artifactId>
+    	<version>4.11</version>
+    	<scope>test</scope>
+    </dependency>
+    
     <dependency>
       <groupId>org.apache.activemq</groupId>
       <artifactId>activemq-client</artifactId>
