--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
     <prefuse.version>beta-20130106</prefuse.version>
     <controlsfx.version>8.40.10</controlsfx.version>
     <enzo.version>0.2.8</enzo.version>
-    <fontawesomefx.version>8.7</fontawesomefx.version>
+    <fontawesomefx.version>8.8</fontawesomefx.version>
     <jackson.version>2.6.1</jackson.version>
     <junit.version>4.12</junit.version>
     
@@ -168,6 +168,35 @@
           </execution>
         </executions>
       </plugin>
+      
+      <plugin>
+<groupId>org.jacoco</groupId>
+<artifactId>jacoco-maven-plugin</artifactId>
+<version>0.7.5.201505241946</version>
+<executions>
+<execution>
+<id>default-prepare-agent</id>
+<goals>
+<goal>prepare-agent</goal>
+</goals>
+</execution>
+<execution>
+<id>default-report</id>
+<phase>prepare-package</phase>
+<goals>
+<goal>report</goal>
+</goals>
+</execution>
+<execution>
+<id>default-check</id>
+<goals>
+<goal>report</goal>
+</goals>
+<configuration>
+</configuration>
+</execution>
+</executions>
+</plugin>
     </plugins>
   </build>
 
