Update to jadice server 5.5.0.0

--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     
     <!-- Dependency versions -->
-    <jadice.server.version>5.4.7.0</jadice.server.version>
+    <jadice.server.version>5.5.0.0</jadice.server.version>
     <levigo.utils.version>2.5.7</levigo.utils.version>
     <filetype.analyzer.version>5.1.2.3</filetype.analyzer.version>
     <log4j.version>1.2.17</log4j.version>
@@ -185,7 +185,7 @@
     </dependency>
     <dependency>
       <groupId>com.levigo.jadice.server</groupId>
-      <artifactId>server-shared</artifactId>
+      <artifactId>jms-transport-shared</artifactId>
       <version>${jadice.server.version}</version>
     </dependency>
     <dependency>
