Adding the ConverterClient mainClass to allow launching the shaded-jar directly

--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,7 @@
               <manifestEntries>
                 <!-- Property is displayed in Application Title Bar and shall show JS version-->
                 <Implementation-Version>${jadice.server.version}</Implementation-Version>
+                <mainClass>ConverterClient</mainClass>
               </manifestEntries>
             </transformer>
           </transformers>
