--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,6 +20,7 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+        java-package: jdk+fx
         
     ## Build-Number
     - name: Generate build number
