--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -42,7 +42,10 @@ jobs:
     
     - name: Build with Maven
       run: mvn -s .m2/settings.xml -gs .m2/settings.xml -B package --file pom.xml
-      
+      env:
+        NEXUS_USERID: ${{secrets.NEXUS_USERID}}
+        NEXUS_PASSWORD: ${{secretes.NEXUS_PASSWORD}}
+        
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
