--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -52,8 +52,8 @@ jobs:
       env:
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
+        tag_name: ${{ steps.version.outputs.release_version }}
+        release_name: ${{ steps.version.outputs.release_version }}
         draft: false
         prerelease: false
         
