--- a/pom.xml
+++ b/pom.xml
@@ -27,25 +27,24 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.8</java.version>
 
-    <jadice.server.version>5.8.0.1</jadice.server.version>
+    <jadice.server.version>5.8.6.0</jadice.server.version>
     <log4j.version>1.2.17</log4j.version>
     <slf4j.version>1.7.30</slf4j.version>
-    <jfreechart.version>1.5.0</jfreechart.version>
+    <jfreechart.version>1.5.3</jfreechart.version>
     <prefuse.version>beta-20130106</prefuse.version>
-    <controlsfx.version>8.40.17</controlsfx.version>
+    <controlsfx.version>8.40.18</controlsfx.version>
     <enzo.version>0.3.6</enzo.version>
     <fontawesomefx.version>8.9</fontawesomefx.version>
     <jackson.version>2.10.5</jackson.version>
-    <junit.version>4.13.1</junit.version>
+    <junit.version>4.13.2</junit.version>
     <ehcache.version>2.10.8.0.59</ehcache.version>
     <commons-cli.version>1.4</commons-cli.version>
-    <junit.version>4.13</junit.version>
 
     <!-- Maven Plugins -->
-    <gmavenplus-plugin.version>1.9.0</gmavenplus-plugin.version>
+    <gmavenplus-plugin.version>1.12.1</gmavenplus-plugin.version>
     <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
     <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
-    <maven-shade-plugin.version>3.2.2</maven-shade-plugin.version>
+    <maven-shade-plugin.version>3.2.4</maven-shade-plugin.version>
     <launch4j-maven-plugin.version>1.7.25</launch4j-maven-plugin.version>
   </properties>
 
@@ -188,6 +187,8 @@
 
   <dependencyManagement>
     <dependencies>
+      <!-- Import the jadice server bill of material. jadice server dependency
+        versions will be managed via this BOM. -->
       <dependency>
         <groupId>com.levigo.jadice.server</groupId>
         <artifactId>jadice-server-bom</artifactId>
