--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -23,7 +23,8 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v1
         with:
-          java-version: 8.0.275
+          java-version: 1.8
+          java-package: jdk+fx
 
       - name: Build with Maven
         run: mvn -s .m2/settings.xml -gs .m2/settings.xml -B package --file pom.xml
