--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    timeout-minutes: 45
+    timeout-minutes: 10
 
     env:
       JSCC_VERSION_PREFIX: '1.'
@@ -25,6 +25,14 @@ jobs:
         java-version: 1.8
         java-package: jdk+fx
 
+    ## Enable Caching
+    - uses: actions/cache@v2
+      id: cache
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
 
     - name: Bump version and create tag
       id: semanticversion
