--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -2,16 +2,12 @@ name: Continuous Integration
 
 on:
   push:
-    branches-ignore:
-      - 'master'
-    paths-ignore:
-      #   !! Attention!! removing the following line may produce an endless loop on the build system!!
-      - '**/README.md'
+    branches-ignore: [ master ]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    timeout-minutes: 45
+    runs-on: ubuntu-20.04
+    timeout-minutes: 5
 
     strategy:
       fail-fast: false
@@ -26,8 +22,17 @@ jobs:
           java-version: 1.8
           java-package: jdk+fx
 
+      ## Enable Caching
+      - uses: actions/cache@v2
+        id: cache
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+
       - name: Build with Maven
-        run: mvn -s .m2/settings.xml -gs .m2/settings.xml -B package --file pom.xml
+        run: mvn -s .m2/settings.xml -gs .m2/settings.xml -B verify -Dmaven.test.failure.ignore=true
         env:
           NEXUS_USERID: ${{secrets.NEXUS_USERID}}
           NEXUS_PASSWORD: ${{secrets.NEXUS_PASSWORD}}
@@ -35,7 +40,7 @@ jobs:
       ## Publish test report
       - name: Publish Test Report
         id: test-report
-        uses: hennejg/action-surefire-report@v1.0.4.jh2
+        uses: scacap/action-surefire-report@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          fail_on_failure: true
+          fail_on_test_failures: true
