--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.8</java.version>
 
-    <jadice.server.version>5.8.6.0</jadice.server.version>
+    <jadice.server.version>5.10.0.2</jadice.server.version>
     <log4j.version>1.2.17</log4j.version>
     <slf4j.version>1.7.30</slf4j.version>
     <jfreechart.version>1.5.3</jfreechart.version>
@@ -235,7 +235,7 @@
       <artifactId>spring-context</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.levigo.jadice.filetype</groupId>
+      <groupId>org.jadice.filetype</groupId>
       <artifactId>analyzer</artifactId>
     </dependency>
     <dependency>
