fix: Update continuous-delivery.yml

--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -57,6 +57,9 @@ jobs:
     - name: run mvn set version
       run: |
         mvn versions:set -DnewVersion=${{ env.NEW_VERSION }}
+      env:
+        NEXUS_USERID: ${{secrets.NEXUS_USERID}}
+        NEXUS_PASSWORD: ${{secrets.NEXUS_PASSWORD}}
 
       ## Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
