--- a/pom.xml
+++ b/pom.xml
@@ -25,29 +25,166 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <java.version>1.8</java.version>
-
-    <jadice.server.version>5.10.2.0</jadice.server.version>
-    <log4j.version>1.2.17</log4j.version>
-    <slf4j.version>1.7.30</slf4j.version>
+    <java.version>11</java.version>
+    <jadice.server.version>5.14.3.0</jadice.server.version>
+    <!--<log4j.version>1.2.17</log4j.version>-->
+    <slf4j.version>2.0.3</slf4j.version>
     <jfreechart.version>1.5.3</jfreechart.version>
     <prefuse.version>beta-20130106</prefuse.version>
-    <controlsfx.version>11.1.0</controlsfx.version>
+    <controlsfx.version>11.1.1</controlsfx.version>
     <enzo.version>0.3.6_1-levigo</enzo.version>
-    <fontawesomefx.version>9.1.2</fontawesomefx.version>
+    <fontawesomefx.version>11.0</fontawesomefx.version>
     <jackson.version>2.10.5</jackson.version>
     <junit.version>4.13.2</junit.version>
-    <ehcache.version>2.10.8.0.59</ehcache.version>
+    <ehcache.version>2.10.10.4.43</ehcache.version>
     <commons-cli.version>1.4</commons-cli.version>
 
     <!-- Maven Plugins -->
-    <gmavenplus-plugin.version>1.12.1</gmavenplus-plugin.version>
-    <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-    <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
-    <maven-shade-plugin.version>3.2.4</maven-shade-plugin.version>
-    <launch4j-maven-plugin.version>1.7.25</launch4j-maven-plugin.version>
-    <maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
+    <gmavenplus-plugin.version>1.13.1</gmavenplus-plugin.version>
+    <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
+    <maven-release-plugin.version>3.0.0-M6</maven-release-plugin.version>
+    <maven-shade-plugin.version>3.3.0</maven-shade-plugin.version>
+    <launch4j-maven-plugin.version>2.1.2</launch4j-maven-plugin.version>
+    <maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
   </properties>
+
+  <dependencyManagement>
+    <dependencies>
+      <!-- Import the jadice server bill of material. jadice server dependency
+        versions will be managed via this BOM. -->
+      <dependency>
+        <groupId>com.levigo.jadice.server</groupId>
+        <artifactId>jadice-server-bom</artifactId>
+        <version>${jadice.server.version}</version>
+        <scope>import</scope>
+        <type>pom</type>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
+  <dependencies>
+    <dependency>
+      <groupId>com.levigo.jadice.server</groupId>
+      <artifactId>base-nodes-client</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.levigo.jadice.server</groupId>
+      <artifactId>jms-transport-shared</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.levigo.jadice.server</groupId>
+      <artifactId>server-msoffice-client</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.levigo.jadice.server</groupId>
+      <artifactId>javamail-client</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.levigo.jadice.server</groupId>
+      <artifactId>libreoffice-client</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.codehaus.groovy</groupId>
+      <artifactId>groovy-all</artifactId>
+      <type>pom</type>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.activemq</groupId>
+      <artifactId>activemq-client</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.jadice.filetype</groupId>
+      <artifactId>analyzer</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+    </dependency>
+    <dependency>
+      <!-- Bridge of SLF4J logging to Log4J -->
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>${slf4j.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.controlsfx</groupId>
+      <artifactId>controlsfx</artifactId>
+      <version>${controlsfx.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jfree</groupId>
+      <artifactId>jfreechart</artifactId>
+      <version>${jfreechart.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>com.lowagie</groupId>
+          <artifactId>itext</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.prefuse</groupId>
+      <artifactId>prefuse</artifactId>
+      <version>${prefuse.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+      <version>${commons-cli.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>eu.hansolo.enzo</groupId>
+      <artifactId>Enzo</artifactId>
+      <version>${enzo.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>net.sf.ehcache</groupId>
+      <artifactId>ehcache</artifactId>
+      <version>${ehcache.version}</version>
+    </dependency>
+    <!--Font Awesome-->
+    <dependency>
+      <groupId>de.jensd</groupId>
+      <artifactId>fontawesomefx-controls</artifactId>
+      <version>${fontawesomefx.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>de.jensd</groupId>
+      <artifactId>fontawesomefx-fontawesome</artifactId>
+      <version>4.7.0-9.1.2</version>
+    </dependency>
+    <dependency>
+      <groupId>de.jensd</groupId>
+      <artifactId>fontawesomefx-commons</artifactId>
+      <version>${fontawesomefx.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>de.jensd</groupId>
+      <artifactId>fontawesomefx-materialicons</artifactId>
+      <version>2.2.0-9.1.2</version>
+    </dependency>
+    <dependency>
+      <groupId>de.jensd</groupId>
+      <artifactId>fontawesomefx-weathericons</artifactId>
+      <version>2.0.10-9.1.2</version>
+    </dependency>
+    <dependency>
+      <groupId>de.jensd</groupId>
+      <artifactId>fontawesomefx-octicons</artifactId>
+      <version>4.3.0-9.1.2</version>
+    </dependency>
+    <!-- Test
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency> -->
+  </dependencies>
 
   <build>
     <defaultGoal>install</defaultGoal>
@@ -191,169 +328,4 @@
     </plugins>
   </build>
 
-  <dependencyManagement>
-    <dependencies>
-      <!-- Import the jadice server bill of material. jadice server dependency
-        versions will be managed via this BOM. -->
-      <dependency>
-        <groupId>com.levigo.jadice.server</groupId>
-        <artifactId>jadice-server-bom</artifactId>
-        <version>${jadice.server.version}</version>
-        <scope>import</scope>
-        <type>pom</type>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
-
-  <dependencies>
-    <dependency>
-      <groupId>com.levigo.jadice.server</groupId>
-      <artifactId>base-nodes-client</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.levigo.jadice.server</groupId>
-      <artifactId>jms-transport-shared</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.levigo.jadice.server</groupId>
-      <artifactId>server-msoffice-client</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.levigo.jadice.server</groupId>
-      <artifactId>javamail-client</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.levigo.jadice.server</groupId>
-      <artifactId>libreoffice-client</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.codehaus.groovy</groupId>
-      <artifactId>groovy-all</artifactId>
-      <type>pom</type>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.activemq</groupId>
-      <artifactId>activemq-client</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-context</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.jadice.filetype</groupId>
-      <artifactId>analyzer</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-databind</artifactId>
-    </dependency>
-
-    <dependency>
-      <!-- Bridge of SLF4J logging to Log4J -->
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-log4j12</artifactId>
-      <version>${slf4j.version}</version>
-    </dependency>
-    <dependency>
-      <!-- Bridge of levigo logging to Log4J -->
-      <groupId>org.jadice.util</groupId>
-      <artifactId>logging-log4j</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>${log4j.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.controlsfx</groupId>
-      <artifactId>controlsfx</artifactId>
-      <version>${controlsfx.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.jfree</groupId>
-      <artifactId>jfreechart</artifactId>
-      <version>${jfreechart.version}</version>
-      <exclusions>
-        <exclusion>
-          <groupId>com.lowagie</groupId>
-          <artifactId>itext</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>org.prefuse</groupId>
-      <artifactId>prefuse</artifactId>
-      <version>${prefuse.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>commons-cli</groupId>
-      <artifactId>commons-cli</artifactId>
-      <version>${commons-cli.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>eu.hansolo.enzo</groupId>
-      <artifactId>Enzo</artifactId>
-      <version>${enzo.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>net.sf.ehcache</groupId>
-      <artifactId>ehcache</artifactId>
-      <version>${ehcache.version}</version>
-    </dependency>
-
-    <!--Font Awesome-->
-    <dependency>
-      <groupId>de.jensd</groupId>
-      <artifactId>fontawesomefx-controls</artifactId>
-      <version>${fontawesomefx.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>de.jensd</groupId>
-      <artifactId>fontawesomefx-fontawesome</artifactId>
-      <version>4.7.0-9.1.2</version>
-    </dependency>
-
-    <dependency>
-      <groupId>de.jensd</groupId>
-      <artifactId>fontawesomefx-commons</artifactId>
-      <version>${fontawesomefx.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>de.jensd</groupId>
-      <artifactId>fontawesomefx-materialicons</artifactId>
-      <version>2.2.0-9.1.2</version>
-    </dependency>
-
-    <dependency>
-      <groupId>de.jensd</groupId>
-      <artifactId>fontawesomefx-weathericons</artifactId>
-      <version>2.0.10-9.1.2</version>
-    </dependency>
-
-    <dependency>
-      <groupId>de.jensd</groupId>
-      <artifactId>fontawesomefx-materialicons</artifactId>
-      <version>2.2.0-9.1.2</version>
-    </dependency>
-
-    <dependency>
-      <groupId>de.jensd</groupId>
-      <artifactId>fontawesomefx-octicons</artifactId>
-      <version>4.3.0-9.1.2</version>
-    </dependency>
-
-
-    <!-- Test -->
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>${junit.version}</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
 </project>
