--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -1,11 +1,11 @@
 # This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: Continuous Delivery
+name: Continuous Delivery Java 11
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   build:
@@ -13,16 +13,17 @@ jobs:
     timeout-minutes: 10
 
     env:
-      JSCC_VERSION_PREFIX: '1.'
-      JSCC_TAG_PREFIX: '1.'
+      JSCC_VERSION_PREFIX: 'java11-1.'
+      JSCC_TAG_PREFIX: 'java11-1.'
 
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
       with:
-        java-version: 1.8
+        distribution: 'zulu'
+        java-version: '11'
         java-package: jdk+fx
 
     ## Enable Caching
@@ -36,9 +37,9 @@ jobs:
 
     - name: Bump version and create tag
       id: semanticversion
-      uses: hennejg/github-tag-action@v4.2.4
+      uses: hennejg/github-tag-action@v4.3.1
       with:
-        release_branches: master
+        release_branches: java11
         github_token: ${{ secrets.GITHUB_TOKEN }}
         tag_prefix: ${{ env.JSCC_TAG_PREFIX }}
 
