build(JS-2317): Add settings.xml

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -2,7 +2,7 @@ name: Continuous Integration
 
 on:
   push:
-    branches-ignore: [ master, java11 ]
+    branches-ignore: [ main ]
 
 jobs:
   build:
