--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -13,23 +13,16 @@ jobs:
       fail-fast: false
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       ## Configure JDK
       - name: Set up JDK
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
-          java-version: 11
-          java-package: jdk+fx
-
-      ## Enable Caching
-      - uses: actions/cache@v2
-        id: cache
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
+          java-version: '11'
+          java-package: 'jdk+fx'
+          cache: 'maven'
+          distribution: 'zulu'
 
       - name: Build with Maven
         run: mvn -s .m2/settings.xml -gs .m2/settings.xml -B verify -Dmaven.test.failure.ignore=true
