build(JS-2317): The artifact org.slf4j:slf4j-log4j12:jar has been relocated to org.slf4j:slf4j-reload4j:jar

--- a/pom.xml
+++ b/pom.xml
@@ -96,9 +96,9 @@
       <artifactId>jackson-databind</artifactId>
     </dependency>
     <dependency>
-      <!-- Bridge of SLF4J logging to Log4J -->
+      <!-- SLF4J Reload4j Binding (ch.qos.reload4j:reload4j see https://reload4j.qos.ch) -->
       <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-log4j12</artifactId>
+      <artifactId>slf4j-reload4j</artifactId>
       <version>${slf4j.version}</version>
     </dependency>
     <dependency>
