--- a/.github/workflows/continuous-delivery-java8.yml
+++ b/.github/workflows/continuous-delivery-java8.yml
@@ -5,7 +5,7 @@ name: Continuous Delivery
 
 on:
   push:
-    branches: [ main ]
+    branches: [ old-master ]
 
 jobs:
   build:
@@ -18,27 +18,20 @@ jobs:
 
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+    - uses: actions/checkout@v3
+    - name: Set up JDK 8
+      uses: actions/setup-java@v3
       with:
-        java-version: 1.8
-        java-package: jdk+fx
-
-    ## Enable Caching
-    - uses: actions/cache@v2
-      id: cache
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
+        java-version: '8'
+        java-package: 'jdk+fx'
+        distribution: 'zulu'
+        cache: 'maven'
 
     - name: Bump version and create tag
       id: semanticversion
       uses: hennejg/github-tag-action@v4.2.4
       with:
-        release_branches: master
+        release_branches: old-master
         github_token: ${{ secrets.GITHUB_TOKEN }}
         tag_prefix: ${{ env.JSCC_TAG_PREFIX }}
 
