--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -18,28 +18,20 @@ jobs:
 
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up JDK 11
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v3
       with:
         distribution: 'zulu'
         java-version: '11'
-        java-package: jdk+fx
-
-    ## Enable Caching
-    - uses: actions/cache@v2
-      id: cache
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
+        java-package: 'jdk+fx'
+        cache: 'maven'
 
     - name: Bump version and create tag
       id: semanticversion
       uses: hennejg/github-tag-action@v4.3.1
       with:
-        release_branches: java11
+        release_branches: main
         github_token: ${{ secrets.GITHUB_TOKEN }}
         tag_prefix: ${{ env.JSCC_TAG_PREFIX }}
 
