--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -2,7 +2,9 @@ name: Continuous Integration
 
 on:
   push:
-    branches-ignore: [ main ]
+    branches-ignore:
+      - "main"
+      - "old-master"
 
 jobs:
   build:
