--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -1,6 +1,3 @@
-# This workflow will build a Java project with Maven
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
-
 name: Continuous Delivery Java 11
 
 on:
@@ -13,8 +10,8 @@ jobs:
     timeout-minutes: 10
 
     env:
-      JSCC_VERSION_PREFIX: 'java11-1.'
-      JSCC_TAG_PREFIX: 'java11-1.'
+      JSCC_VERSION_PREFIX: '1.'
+      JSCC_TAG_PREFIX: '1.'
 
 
     steps:
